corrected index referencing

--- a/index2.html
+++ b/index2.html
@@ -19,9 +19,9 @@
             <span class="navbar-brand mb-0 name">Jonathon Condon</span>
 
             <div class="justify-content-end">
-                <a href="index2.html" type="button" class="border" target="blank">Contact</a>
-                <a href="index.html" type="button" class="border" target="blank">Portfolio</a>
-                <a href="index3.html" type="button" class="border" target="blank">About</a>
+                <a href="index2.html" type="button" class="border">Contact</a>
+                <a href="index.html" type="button" class="border">Portfolio</a>
+                <a href="index1.html" type="button" class="border">About</a>
             </div>
         </nav>
     </article>
