--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <article>
-        <nav class="md navbar bg-dark height-70px col-12">
+        <nav class="navbar bg-dark height-70px col-12">
             <span class="navbar-brand mb-0 name">Jonathon Condon</span>
 
             <div class="justify-content-end">
