--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -26,39 +26,21 @@
         </nav>
     </article>
 
-    <div class="container white md boxWidth">
+    <div class="container white md">
         <br>
         <div class="row">
-            <h1 class="col-12">My Portfolio Demos</h1>
+            <h1 class="col-12">About</h1>
         </div>
 
         <hr>
-
+        <br>
         <div class="row">
-            <div class="col-12 justify-content-between">
-                <div>
-                    <h2>Images from Project 1</h2>
-                    <hr>
-                    <img class="img imgFit" src="assets/images/project1front.png" alt="front page">
-                    <img class="img imgFit" src="assets/images/project1week.png" alt="week view">
-                    <img class="img imgFit" src="assets/images/project1month.png" alt="month">
-                    <img class="img imgFit" src="assets/images/project1addevent.png" alt="add event">
-                    <div>
-                </div>
-                    <h2>Images from Work Day Scheduler</h2>
-                    <hr>
-                    <img class="img imgFit" src="assets/images/WorkDayDay.png" alt="work scheduler day view">
-                    <img class="img imgFit" src="assets/images/WorkDayNight.png" alt="work shceduler night view">
-                </div>
-                <div>
-                    <h2>Images from My Car Game</h2>
-                    <hr>
-                    <img class="img imgFit" src="assets/images/carGameOptions.png" alt="a photo">
-                    <img class="img imgFit" src="assets/images/carGameTuneup.png" alt="a photo">
-                </div>
+            <div class="col-12">
+                <img class="about profImg" src="assets/images/academy.jpg" alt="a place kitten">
+                <p>
+                    My name is Jonathon Condon and I'm a Front and Back End Web Developer. I am young, and that affords me the opportunity to look for whatever I might aspire to accomplish. I truly feel this is the time of my life when I should reach out and begin building the business and professional side of my repertoire. I have recently graduated the UW Coding Bootcamp Program and am now working in professional teams and enviroments to garner further knowledge and understanding about web development and coding. I have worked in several groups and teams to complete projects, including using API data to create in-depth web applications designed to give a personalized experience to the user based on the returned responses.
+                </p>
             </div>
-        </div>
-
 
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
