--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -19,9 +19,9 @@
             <span class="navbar-brand mb-0 name">Jonathon Condon</span>
 
             <div class="justify-content-end">
-                <a href="index2.html" type="button" class="border">Contact</a>
+                <a href="contact.html" type="button" class="border">Contact</a>
                 <a href="index.html" type="button" class="border">Portfolio</a>
-                <a href="index1.html" type="button" class="border">About</a>
+                <a href="about.html" type="button" class="border">About</a>
             </div>
         </nav>
     </article>
