new links to pages

--- a/index.html
+++ b/index.html
@@ -37,21 +37,36 @@
         <div class="row">
             <div class="col-12 justify-content-between">
                 <div>
-                    <h2>Images from Project 1</h2>
+                    <a href="https://z1springer.github.io/what_to_do/">
+                        <h2>Project 1</h2>
+                    </a>
+                    <p>This project was designed to work as a fully functional calender, with a day, week, and month
+                        view. It also generates random events from the user-specified category to offer ideas for what
+                        to do when you have no clue what could make your boredom go away!</p>
                     <hr>
                     <img class="img imgFit" src="assets/images/project1front.png" alt="front page">
                     <img class="img imgFit" src="assets/images/project1week.png" alt="week view">
                     <img class="img imgFit" src="assets/images/project1month.png" alt="month">
                     <img class="img imgFit" src="assets/images/project1addevent.png" alt="add event">
-                    <div>
                 </div>
-                    <h2>Images from Work Day Scheduler</h2>
+                <div>
+
+                    <a href="https://jcdon.github.io/DailyPlannerJCC/">
+                        <h2>Work Day Scheduler</h2>
+                    </a>
+
+                    <p>This project featured local storage, and was designed to dislay an 9 hr day and have events
+                        saveable to the users local system. Then, the user could return to their plans later to check
+                        off or intiate new future plans.</p>
                     <hr>
                     <img class="img imgFit" src="assets/images/WorkDayDay.png" alt="work scheduler day view">
                     <img class="img imgFit" src="assets/images/WorkDayNight.png" alt="work shceduler night view">
                 </div>
                 <div>
-                    <h2>Images from My Car Game</h2>
+                        <h2>My Car Game</h2>
+                    This simple car game features the ability to honk, drive to work and around world, and get a tune up
+                    for your car. If, Else statements make it possible to restrict user inputs to certain letters and
+                    prerequisites.
                     <hr>
                     <img class="img imgFit" src="assets/images/carGameOptions.png" alt="a photo">
                     <img class="img imgFit" src="assets/images/carGameTuneup.png" alt="a photo">
