fixed one letter

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h2>Work Day Scheduler</h2>
                     </a>
 
-                    <p>This project featured local storage, and was designed to dislay an 9 hr day and have events
+                    <p>This project featured local storage, and was designed to display an 9 hr day and have events
                         saveable to the users local system. Then, the user could return to their plans later to check
                         off or intiate new future plans.</p>
                     <hr>
