--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <div class="row">
             <div class="col-12 justify-content-between">
                 <div>
-                    <a href="https://z1springer.github.io/what_to_do/">
-                        <h2>Project 1</h2>
+                    <a target="blank" href="https://z1springer.github.io/what_to_do/">
+                        <h2>What To Do?: Calender App</h2>
                     </a>
+                    <a href="https://github.com/Z1springer/what_to_do">https://github.com/Z1springer/what_to_do</a>
                     <p>This project was designed to work as a fully functional calender, with a day, week, and month
                         view. It also generates random events from the user-specified category to offer ideas for what
                         to do when you have no clue what could make your boredom go away!</p>
@@ -50,26 +51,29 @@
                     <img class="img imgFit" src="assets/images/project1addevent.png" alt="add event">
                 </div>
                 <div>
-
-                    <a href="https://jcdon.github.io/DailyPlannerJCC/">
+                    <a href="https://pizzacutterapp.herokuapp.com/pizzacutter" target="blank">
+                        <h2>Pizza Cutter's</h2>
+                    </a>
+                    <a href="https://github.com/zhuxiaoyu1019/online-order-system">https://github.com/zhuxiaoyu1019/online-order-system</a>
+                    <p>This app was created for a real customer who owns a small local pizza restaraunt. He had issues with his static site and wanted a more heavy-weight application that could be edited and updated from within the site via an owners dashboard. It also contains a user dashboard for restaraunt customers to view menu items and prepare an order.</p>
+                    <hr>
+                    <img class="img imgFit" src="assets/images/pizzacutterMain.png" alt="a photo">
+                    <img class="img imgFit" src="assets/images/pizzacutterMenu.png" alt="a photo">
+                    <img class="img imgFit" src="assets/images/pizzacutterAbout.png" alt="a photo">
+                    <img class="img imgFit" src="assets/images/pizzacutterContact.png" alt="a photo">
+                </div>
+                <div>
+    
+                    <a target="blank" href="https://jcdon.github.io/DailyPlannerJCC/">
                         <h2>Work Day Scheduler</h2>
                     </a>
-
+                    <a href="https://github.com/JCDon/DailyPlannerJCC">https://github.com/JCDon/DailyPlannerJCC</a>
                     <p>This project featured local storage, and was designed to display an 9 hr day and have events
-                        saveable to the users local system. Then, the user could return to their plans later to check
+                        saveable to the users local system. Then, the user could return to their schedule later to check
                         off or intiate new future plans.</p>
                     <hr>
                     <img class="img imgFit" src="assets/images/WorkDayDay.png" alt="work scheduler day view">
                     <img class="img imgFit" src="assets/images/WorkDayNight.png" alt="work shceduler night view">
-                </div>
-                <div>
-                        <h2>My Car Game</h2>
-                    This simple car game features the ability to honk, drive to work and around world, and get a tune up
-                    for your car. If, Else statements make it possible to restrict user inputs to certain letters and
-                    prerequisites.
-                    <hr>
-                    <img class="img imgFit" src="assets/images/carGameOptions.png" alt="a photo">
-                    <img class="img imgFit" src="assets/images/carGameTuneup.png" alt="a photo">
                 </div>
             </div>
         </div>
