--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                     <br>
                     <a target="blank" href="https://github.com/JCDon">My GitHub Profile</a>
                     <br>
-                    <a target="blank" href="assets/images/jonResume.pdf">My Resume</a>
+                    <a target="blank" href="assets/images/jonathonCondon.pdf">My Resume</a>
                 </div>
             </div>
 
